--- a/.github/workflows/java.test.yml
+++ b/.github/workflows/java.test.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: 11
 
       - name: Build with Maven
-        run: mvn clean
+        run: mvn clean install
 
       - name: Run tests
         run: mvn test
