--- a/.github/workflows/java.test.yml
+++ b/.github/workflows/java.test.yml
@@ -11,15 +11,15 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 17
+          java-version: 11
 
       - name: Build with Maven
-        run: mvn clean install
+        run:  mvn -B package --file pom.xml
 
       - name: Run tests
         run: mvn test
