--- a/.github/workflows/java.test.yml
+++ b/.github/workflows/java.test.yml
@@ -15,11 +15,12 @@ jobs:
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
+        distribution: temurin
         with:
           java-version: 11
 
       - name: Build with Maven
-        run:  mvn -B package --file pom.xml
+        run:  mvn clean install
 
       - name: Run tests
         run: mvn test
