--- a/.github/workflows/java.test.yml
+++ b/.github/workflows/java.test.yml
@@ -15,9 +15,10 @@ jobs:
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
-        distribution: temurin
         with:
           java-version: 11
+          distribution: 'temurin'
+          cache: 'maven'
 
       - name: Build with Maven
         run:  mvn clean install
