--- a/.github/workflows/java.test.yml
+++ b/.github/workflows/java.test.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Run tests
         run: mvn test
 
+      - name: Run Static Code Analysis
+        run: mvn spotbug:check
 
 
 
