--- a/.github/workflows/java.test.yml
+++ b/.github/workflows/java.test.yml
@@ -27,7 +27,7 @@ jobs:
         run: mvn test
 
       - name: Run Static Code Analysis
-        run: mvn spotbug:check
+        run: mvn spotbugs:check
 
 
 
