--- a/.github/workflows/webhook.test.yml
+++ b/.github/workflows/webhook.test.yml
@@ -10,3 +10,7 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_USERNAME: ${{ secrets.SLACK_USERNAME }}
+          SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
+          SLACK_COLOR: ${{ secrets.SLACK_COLOR }}
+          SLACK_MESSAGE: ${{ secrets.SLACK_MESSAGE }}
